When importing an obj the cursor icon gets stuck in progress mode #80363

Closed
opened 2020-09-02 07:43:51 +02:00 by Kuzey · 19 comments

System Information
Operating system: macOS 10.14.6
Graphics card:

Blender Version
Broken: Version 2.90.0 (2.90.0 2020-08-31)
Worked: 2.83.X

Short description of error
When I import an obj the cursor icon gets stuck in the progress indicator mode. To fix it, one has to change the editor or panel. I haven't tried it with the other import options.

See image blendcur.jpg

Exact steps for others to reproduce the error
Import an OBJ file.

**System Information** Operating system: macOS 10.14.6 Graphics card: **Blender Version** Broken: Version 2.90.0 (2.90.0 2020-08-31) Worked: 2.83.X **Short description of error** When I import an obj the cursor icon gets stuck in the progress indicator mode. To fix it, one has to change the editor or panel. I haven't tried it with the other import options. See image ![blendcur.jpg](https://archive.blender.org/developer/F8831749/blendcur.jpg) **Exact steps for others to reproduce the error** Import an OBJ file.
Author

Added subscriber: @kuzey

Added subscriber: @kuzey

#79182 was marked as duplicate of this issue

#79182 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Campbell Barton self-assigned this 2020-09-03 03:08:05 +02:00

This displays a number at the cursor, used to show progress. closing.

This displays a number at the cursor, used to show progress. closing.
Author

Um do you guys test on Mojave?
Here is a video of it in action, clearly a bug, yes?

ps. the rocket is the imported obj, just to be clear.
blendbug.mov

Um do you guys test on Mojave? Here is a video of it in action, clearly a bug, yes? ps. the rocket is the imported obj, just to be clear. [blendbug.mov](https://archive.blender.org/developer/F8835518/blendbug.mov)
Member

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'
Campbell Barton was unassigned by Ankit Meel 2020-09-03 07:37:02 +02:00
Member

Actually there is a bug. the cursor is stuck in that progress mode forever. I take it out of blender, bring it back in and then it’s fixed.

I wanted to confirm it yesterday, but didn’t know which projects to tag.

Actually there is a bug. the cursor is stuck in that progress mode forever. I take it out of blender, bring it back in and then it’s fixed. I wanted to confirm it yesterday, but didn’t know which projects to tag.
Ankit Meel changed title from When importing an obj the cursor icon disappears to When importing an obj the cursor icon gets stuck in progress mode 2020-09-03 10:23:01 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Since this is the only change in OBJ code since 2.83, I'd guess that addon is not at fault
https://github.com/blender/blender-addons/compare/blender-v2.83-release...master#diff-e7076ffb3d474ff84eed2e0ad2b6b271

Since this is the only change in OBJ code since 2.83, I'd guess that addon is not at fault https://github.com/blender/blender-addons/compare/blender-v2.83-release...master#diff-e7076ffb3d474ff84eed2e0ad2b6b271

Added subscriber: @jenkm

Added subscriber: @jenkm

#80333 Related, similar?

#80333 Related, similar?
Member

In #80363#1008310, @jenkm wrote:
#80333 Related, similar?

Don't think so. this progress cursor issue has been there for 2-3 months now. #80333 is very recent.

> In #80363#1008310, @jenkm wrote: > #80333 Related, similar? Don't think so. this progress cursor issue has been there for 2-3 months now. #80333 is very recent.
Member

Closed as duplicate of #80333

Closed as duplicate of #80333
Member

Caused by e490dc4346. thanks @jenkm!

Caused by e490dc4346. thanks @jenkm!

This issue was referenced by 7b66c719ae

This issue was referenced by 7b66c719aefde816e6159d058db45a697daa5ec8
Member

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Member
Added subscribers: @MikhailRachinskiy, @lichtwerk, @BorekBures, @Jeroen-Bakker, @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80363
No description provided.