Fix T80363: Progress cursor getting stuck